Fixing spacing issues with create card tool

--- a/src/app/builder/components/cards/CreateCardOption.less
+++ b/src/app/builder/components/cards/CreateCardOption.less
@@ -5,10 +5,10 @@
   
   display: flex;
   align-items: center;
+  box-sizing: border-box;
   
   padding: 6px;
   // border-bottom: 1px solid rgba(255,255,255,0.15);
-  margin: 0px 6px;
   margin-bottom: 6px;
   border-radius: 3px;
   width: 100%;
