--- a/src/app/builder/components/cards/CreateCardTool.less
+++ b/src/app/builder/components/cards/CreateCardTool.less
@@ -28,7 +28,7 @@
   
   .create-card-selector {
     // margin-top: -6px;
-    max-height: 150px;
+    max-height: 250px;
     overflow: auto;
     
     border-radius: @create-card-border-radius;
@@ -41,9 +41,7 @@
     }
     
     .create-card-selector-inner {
-      padding: @standard-margin / 2;
-      display: flex;
-      flex-wrap: wrap;
+      padding: @standard-margin;
     }
   }
   
